<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/tv_title"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="the total amount in the end of the investment"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView

        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:textColor="@color/result"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_hint"
        tools:text="$ 23.200,83" />

    <TextView
        android:id="@+id/tv_yielded_value_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="the yield value:"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    <TextView
        android:id="@+id/tv_yielded_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="R$ 9.234,90"
        android:textColor="@color/yiel"
        app:layout_constraintEnd_toEndOf="@+id/tv_yielded_value_hint"
        app:layout_constraintStart_toStartOf="@+id/tv_yielded_value_hint"
        app:layout_constraintTop_toBottomOf="@+id/tv_yielded_value_hint" />


    <TextView
        android:id="@+id/tv_contribution_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/contribution_hint"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_yielded_value" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_contribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contribution_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_contribution"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:hint="e.g.: 750"
            android:paddingStart="0dp"
            android:textColorHint="@color/hint"
            android:textSize="24sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_time_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/time_hint"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_contribution" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_time"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="e.g.: 48"
            android:paddingStart="0dp"
            android:textColorHint="@color/hint"
            android:textSize="24sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_interest_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/interest_hint"
        android:textColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_time" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_interest_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_interest"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="e.g.: 1.2"
            android:paddingStart="0dp"
            android:textColorHint="@color/hint"
            android:textSize="24sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/btn_clear"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/primary"
        android:text="Clean"
        android:textColor="@color/yiel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/yiel" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="205dp" />

    <Button

        android:textColor="@color/primary"
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="54dp"
        android:backgroundTint="@color/yiel"
        android:text="@string/btn_text_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideLine" />


</androidx.constraintlayout.widget.ConstraintLayout>